# falcon-2

./: .gitignore  .gitmodules  Cargo.toml  plan.md  run.ps1
.cargo/: config.toml  config.toml.txt
bot/: Cargo.toml
bot/src/: bot.rs
bot/src/game/: mod.rs  settings.rs  tmp.rs  utils.rs
bot/src/game/commands/: controls.rs  info.rs  mod.rs
bot/src/lib/: config.rs  env.rs  logs.rs  mod.rs
bot/src/root/: master.rs
engine/: Cargo.toml
engine/benches/: bench_search.rs  bench_v2.rs
engine/examples/: flamegraph_search.rs
engine/src/: keyfinder.rs  lib.rs  main.rs  trainer.rs
engine/src/bench/: main.rs
engine/src/game/: data.rs  garbage.rs  mod.rs  queue.rs  rng.rs
engine/src/game2/: board.rs  config.rs  data.rs  map.rs  mod.rs  movegen.rs  util.rs
engine/src/io/: mod.rs
engine/src/search/: eval.rs  mod.rs  movegen.rs
engine/src/tuner/: cmaes.rs  main.rs  sim.rs  spsa.rs
engine/tests/: collision_map.rs  movegen.rs
src/: keyfinder.rs  lib.rs  main.rs  protocol.rs  search.rs  trainer.rs
src/bot/: mod.rs
src/bot/game/: mod.rs  settings.rs  utils.rs
src/bot/game/commands/: controls.rs  info.rs  mod.rs
src/bot/lib/: commands.rs  config.rs  events.rs  mod.rs
src/bot/root/: master.rs
src/engine/: keyfinder.rs  mod.rs  trainer.rs
src/engine/game/: data.rs  mod.rs  queue.rs
src/engine/search/: eval.rs  mod.rs
src/game/: data.rs  garbage.rs  mod.rs  queue.rs  rng.rs
src/io/: mod.rs
src/search/: compressor.rs  eval.rs  mod.rs
ts/: index.ts  keyfinder.ts  package.json  tsconfig.json
ts/game/: data.ts  garbage.ts  index.ts  queue.ts  rng.ts
ts/search/: eval.ts  index.ts  mod.ts
weights/: weights.json  weights_new.json
