[package]
name = "falcon"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
clap = { version = "4.5.49", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.31"
parking_lot = "0.12.5"
rand = "0.9.1"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.18"
tokio = "1.52.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
triangle-rs = { path = "./triangle-rs" }
validator = { version = "0.20.0", features = ["derive"] }

[profile.profiling]
inherits = "release"
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
