[workspace]
members = [".", "engine", "bot", "triangle-rs", "triangle-rs/msgpackr"]
resolver = "3"

[toolchain]
channel = "nightly"

[package]
name = "falcon"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
dotenvy = "0.15.7"
falcon-bot = { path = "bot" }
falcon-engine = { path = "engine" }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.18"
tokio = "1.52.3"
tracing-subscriber = "0.3.23"

[profile.profiling]
inherits = "release"
debug = true

[profile.testing]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 16
panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
