[package]
name = "falcon-bot"
version = "0.1.0"
edition = "2024"

[lib]
name = "bot"
path = "src/bot.rs"

[dependencies]
clap = { version = "4.5.49", features = ["derive", "env"] }
falcon-engine = { path = "../engine" }
futures = "0.3.31"
parking_lot = "0.12.5"
rand = "0.9.1"
chrono = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.18"
tokio = "1.52.3"
tracing = "0.1.44"
triangle-rs = { path = "../triangle-rs" }
validator = { version = "0.20.0", features = ["derive"] }
