[package]
name = "falcon-engine"
version = "0.1.0"
edition = "2024"

[toolchain]
channel = "nightly"

[lib]
name = "engine"
path = "src/lib.rs"

[[bin]]
name = "falcon-engine"
path = "src/main.rs"

[[bin]]
name = "tuner"
path = "src/tuner/main.rs"

[[bin]]
name = "bench"
path = "src/bench/main.rs"

[dependencies]
rayon = "1.10.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
triangle-rs = { path = "../triangle-rs" }
tokio = "1.52.3"
futures = "0.3.32"
serde_json = "1.0.149"
cmaes = "0.2.2"
seq-macro = "0.3.6"
const_for = "0.1.5"
num-format = "0.4.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_search"
harness = false

[[bench]]
name = "bench_v2"
harness = false
	
[profile.profiling]
inherits = "release"
debug = true
